update test csproj

--- a/GitIgnore.Tests/GitIgnore.Tests.csproj
+++ b/GitIgnore.Tests/GitIgnore.Tests.csproj
@@ -56,6 +56,11 @@
       <Name>GitIgnore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="test\1\" />
+    <Folder Include="test\2\" />
+    <Folder Include="test\3\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
